--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+#Define el puerto donde "escuchará" el servidor
 server.port=80
+logging.pattern.dateformat=hh:mm
+spring.main.banner-mode=off
+spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost/tienda?serverTimezone=America/Costa_Rica&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Ansoto01*
@@ -7,3 +11,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#MYSQL Conexión
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=True&serverTimeZone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar10_Clave.
+#Mostrar información en el Log
+spring.java.properties.hibernate.format_sql=true;
+loggin.level.org.hibernate.SQL=DEBUG
+loggin.level.org.type.descriptor.sql.BasicBinder=TRACE  
