--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,28 @@ server.port=80
 logging.pattern.dateformat=hh:mm
 spring.main.banner-mode=off
 spring.thymeleaf.cache=false
+#Parámetros para modificar la salida del Log de Netbeans
+#tiene que ver con la base de datos
 spring.datasource.url=jdbc:mysql://localhost/tienda?serverTimezone=America/Costa_Rica&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Ansoto01*
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+#Java Persistence API (JPA) es la propuesta estandar que ofrece Java para implementar
+#framework Object Relacional Mapping (ORM) que permite interactuar con la base de
+#datos por medio de objetos, en otras palabras JPA es el encargado de convertir los
+#objetos Java en instrucciones para el manejador de la base de datos. Existen muchas
+#implementaciones de JPA, entre ellas Hibernate, la cual es una herramienta para el 
+#mapeo objetos-relacional que facilita el mapeo de atributos entre una base de datos
+#relacional tradicional y el modelo de objetos de una aplicacion.
+#Dialecto con el que se va a comunicar la base de datos
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#MYSQL Conexión
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=True&serverTimeZone=UTC
-spring.datasource.username=usuario_prueba
-spring.datasource.password=Usuar10_Clave.
+#MYSQL Conexión Serie de Videos
+#spring.datasource.url=jdbc:mysql://localhost/techshop?useTimezone=true&serverTimeZone=UTC
+#spring.datasource.username=usuario_prueba
+#spring.datasource.password=Usuar10_Clave.
 #Mostrar información en el Log
 spring.java.properties.hibernate.format_sql=true;
 loggin.level.org.hibernate.SQL=DEBUG
